--- a/config/locales/custom/en/general.yml
+++ b/config/locales/custom/en/general.yml
@@ -42,3 +42,11 @@ en:
       vote_registered: "Your vote has been registered correctly."
   shared:
     expired: "Expired"
+  layouts:
+    header:
+      sisli_belediyesi: "Sisli Belediyesi"
+      sisli_belediyesi_link: "https://www.sisli.bel.tr"
+      sisli_kent_konseyi: "Sisli Kent Konseyi"
+      sisli_kent_konseyi_link: "https://www.sislikentkonseyi.org"
+      benim_butcem: "Benim Butcem"
+      benim_butcem_link: "http://www.benimbutcem.com"
