--- a/config/locales/en/activerecord.yml
+++ b/config/locales/en/activerecord.yml
@@ -515,6 +515,9 @@ en:
         document_number: Document number
         date_of_birth: Date of birth
         postal_code: Postal code
+        phone_number: "Phone number"
+        gender: "Gender"
+        neighborhood: "Neighborhood"
     errors:
       models:
         user:
