--- a/config/locales/en/admin.yml
+++ b/config/locales/en/admin.yml
@@ -1682,19 +1682,14 @@ en:
     local_census_records:
       index:
         title: Manage local census
-        create: Create new local census record
         no_local_census_records: There are no local census records.
         document_type: Document type
         document_number: Document number
-        date_of_birth: Date of birth
-        postal_code: Postal code
-        import: Import CSV
-      new:
-        creating: Creating new local census record
+        phone_number: "Phone number"
+        gender: "Gender"
+        neighborhood: "Neighborhood"
       create:
         notice: New local census record created successfully!
-      edit:
-        editing: Editing local census record
       update:
         notice: Local census record updated successfully!
       destroy:
