--- a/config/locales/en/verification.yml
+++ b/config/locales/en/verification.yml
@@ -54,11 +54,8 @@ en:
           passport: Passport
           residence_card: Residence card
           spanish_id: DNI
-        error_not_allowed_age: You don't have the required age to participate
-        error_not_allowed_postal_code: In order to be verified, you must be registered.
         error_verifying_census: The Census was unable to verify your information. Please confirm that your census details are correct by calling to City Council or visit one Citizen Support Office.
         form_errors: prevented the verification of your residence
-        postal_code_note: To verify your account you must be registered
         terms: the terms and conditions of access
         title: Verify residence
         verify_residence: Verify residence
@@ -72,10 +69,7 @@ en:
         submit_button: Send
         title: Security code confirmation
       new:
-        phone: Enter your mobile phone number to receive the code
-        phone_format: "<strong><em>(Example: 612345678 or +34612345678)</em></strong>"
-        phone_note: We only use your phone to send you a code, never to contact you.
-        phone_placeholder: "Example: 612345678 or +34612345678"
+        phone_note: "We will send you a code via SMS to verify you are the owner."
         submit_button: Send
         title: Send confirmation code
       update:
@@ -83,8 +77,6 @@ en:
         flash:
           level_three:
             success: Code correct. Your account is now verified
-          level_two:
-            success: Code correct
     step_1: Residence
     step_2: Confirmation code
     step_3: Final verification
