Fix errors on sending verification sms

--- a/config/locales/en/verification.yml
+++ b/config/locales/en/verification.yml
@@ -77,6 +77,7 @@ en:
         flash:
           level_three:
             success: Code correct. Your account is now verified
+      api_message: "%{url} verification code: %{code}"
     step_1: Residence
     step_2: Confirmation code
     step_3: Final verification
