--- a/config/locales/en/verification.yml
+++ b/config/locales/en/verification.yml
@@ -45,6 +45,7 @@ en:
         flash:
           success: Residence verified
       new:
+        phone_number_help_text: "Please type the telephone with the format 905xxxxxxxxx"
         accept_terms_text: I accept %{terms_url} of the Census
         accept_terms_text_title: I accept the terms and conditions of access of the Census
         document_number: Document number
